--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ h1 {
   background-color: rgb(255, 0, 0);
 }
 
-.two {
-  background-color: rgb(0, 255, 0);
+.green {
+  background-color: #00ff00;
 }
 
-.three {
+.blue {
   background-color: blue;
 }
 
