--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@ h1 {
 }
 
 .red {
-  background: linear-gradient(90deg, rgb(255, 0, 0) 75%, rgb(0, 255, 0), rgb(0, 0, 255));
+  background: linear-gradient(rgb(255, 0, 0) 75%, rgb(0, 255, 0), rgb(0, 0, 255));
 }
 
 .green {
-  background-color: #007f00;
+  background: linear-gradient(#55680D,%20#71F53E,%20#116C31);
 }
 
 .blue {
-  background-color: hsl(240, 100%, 50%);
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
 }
 
 .container {
