--- a/style.css
+++ b/style.css
@@ -29,9 +29,14 @@ h1 {
   width: 110px;
   height: 25px;
   background-color: rgba(255, 255, 255, 0.5);
+  border-left-width: 10px;
 }
 
 .cap {
   width: 60px;
   height: 25;
+} 
+
+.sleeve, .cap {
+  display: inline-block;
 }
