--- a/style.css
+++ b/style.css
@@ -10,14 +10,18 @@ h1 {
 
 .red {
   background: linear-gradient(rgb(255, 0, 0) 75%, rgb(0, 255, 0), rgb(0, 0, 255));
-}
+  box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
+} 
 
 .green {
   background: linear-gradient(#55680D,%20#71F53E,%20#116C31);
+  box-shadow: 0 0 20px 0 #3B7E20CC;
 }
 
 .blue {
   background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+  box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
+
 }
 
 .container {
