--- a/Registration form/styles.css
+++ b/Registration form/styles.css
@@ -17,3 +17,10 @@ h1, p {
   text-align: center;
   margin: 1em auto;
 }
+
+form {
+  margin: 0 auto;
+  min-width: 300px;
+  max-width: 500px;
+  width: 60vw;
+}
