--- a/Registration form/styles.css
+++ b/Registration form/styles.css
@@ -32,5 +32,10 @@ fieldset {
 }
 
 fieldset:last-of-type {
-  border-bottom: 0;
+  border-bottom: none;
+}
+
+input, textarea, select {
+  width: 100%;
+  margin: 10px 0 0 0;
 }
