--- a/Registration form/styles.css
+++ b/Registration form/styles.css
@@ -38,6 +38,7 @@ fieldset:last-of-type {
 input, textarea, select {
   width: 100%;
   margin: 10px 0 0 0;
+  min-height: 2em;
 }
 
 .inline {
@@ -50,5 +51,8 @@ input, textarea {
   background-color: #0a0a23;
   border: 1px solid #0a0a23;
   color: #ffffff;
-  min-height: 2em;
+}
+
+select {
+  background-color: #ffffff;
 }
