--- a/Survey/styles-min.css
+++ b/Survey/styles-min.css
@@ -7,6 +7,7 @@ body {
 
 h1, #description {
   text-align: center;
+  margin: 1em auto;
 }
 
 form {
@@ -20,4 +21,31 @@ form {
 fieldset {
   border: 0;
   padding: 2rem 0;
+}
+
+label {
+  display: block;
+  marign: 0.5rem, 0;
+  margin-top: 2em;
+}
+
+input, textarea, select {
+  width: 100%;
+  margin: 10px 0 0 0;
+  min-height: 2em;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  min-width: 300px;
 }
