--- a/Survey/styles-min.css
+++ b/Survey/styles-min.css
@@ -3,6 +3,9 @@ body {
   height: 100vh;
   margin: 0;
   font-size: 16px;
+  background-color: rgb(55, 64, 64);
+  color: white;
+  font-family: Tahoma;
 }
 
 h1, #description {
@@ -15,7 +18,10 @@ form {
   min-width: 300px;
   max-width: 500px;
   width: 60vw;
+  padding: 3rem;
   padding-bottom: 2em;
+  color: rgb(39, 45, 45);
+  background: linear-gradient(45deg, rgb(145, 216, 138), rgb(133, 145, 156));
 }
 
 fieldset {
@@ -32,13 +38,8 @@ label {
 input, textarea, select {
   width: 100%;
   margin: 10px 0 0 0;
-  min-height: 2em;
-}
-
-.inline {
-  width: unset;
-  margin: 0 0.5em 0 0;
-  vertical-align: middle;
+  min-height: 3em;
+  border-radius: 5px;
 }
 
 input[type="submit"] {
@@ -49,3 +50,14 @@ input[type="submit"] {
   font-size: 1.1rem;
   min-width: 300px;
 }
+
+span {
+  font-size: 12px;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
