--- a/Photo Gallery/styles.css
+++ b/Photo Gallery/styles.css
@@ -15,3 +15,12 @@ body {
   max-width: 350px;
   height: 300px;
 }
+
+.header {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 32px;
+  background-color: #0a0a23;
+  color: #fff;
+  border border: 4px solid #fdb347;
+}
