--- a/Photo Gallery/styles.css
+++ b/Photo Gallery/styles.css
@@ -30,6 +30,11 @@ body {
   border-radius: 10px;
 }
 
+.gallery::after {
+  content: "";
+  width: 350px;
+}
+
 .header {
   text-align: center;
   text-transform: uppercase;
