--- a/Color markers/style.css
+++ b/Color markers/style.css
@@ -2,31 +2,20 @@ h1 {
   text-align: center;
 }
 
-.marker {
-  height: 25px;
-  width: 200px;
-  margin: 10px auto;
-}
-
-.red {
-  background: linear-gradient(rgb(255, 0, 0) 75%, rgb(0, 255, 0), rgb(0, 0, 255));
-  box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
-} 
-
-.green {
-  background: linear-gradient(#55680D,%20#71F53E,%20#116C31);
-  box-shadow: 0 0 20px 0 #3B7E20CC;
-}
-
-.blue {
-  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
-  box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
-
-}
-
 .container {
   background-color: rgb(255, 255, 255);
   padding: 10px 0;
+}
+
+.marker {
+  width: 200px;
+  height: 25px;
+  margin: 10px auto;
+}
+
+.cap {
+  width: 60px;
+  height: 25px;
 }
 
 .sleeve {
@@ -36,11 +25,21 @@ h1 {
   border-left: 10px double rgba(0, 0, 0, 0.75);
 }
 
-.cap {
-  width: 60px;
-  height: 25;
-} 
-
-.sleeve, .cap {
+.cap, .sleeve {
   display: inline-block;
+}
+
+.red {
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+  box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
+}
+
+.green {
+  background: linear-gradient(#55680D, #71F53E, #116C31);
+  box-shadow: 0 0 20px 0 #3B7E20CC;
+}
+
+.blue {
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+  box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
 }
